Added Google APK and firebase dependencies

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,7 +5,9 @@ buildscript {
         jcenter()
     }
 
+
     dependencies {
+       classpath 'com.google.gms:google-services:4.2.0'   // <-- here
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
@@ -29,3 +31,5 @@ subprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+apply plugin: 'com.google.gms.google-services' // <-- add
