--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^3.0.0
+  cloud_firestore: ^0.12.9
+  firebase_core: ^0.4.0+8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
