--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,8 @@ dependencies:
     sdk: flutter
   provider: ^3.0.0
   cloud_firestore: ^0.12.9
-  firebase_core: ^0.4.0+8
+  firebase_database: ^0.4.4
+  firebase_core: ^0.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
